# fastapi-shop

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 195eb4439d2b_add_core_tables.py  1b9e84eedd11_add_check_quantity_positive.py  2f8c68e8e0a9_add_payment_id_to_orders.py  39266f6c07d7_make_product_description_nullable.py  41e3621f49a3_enable_pg_trgm.py  54d115e0bde3_cart_constraints.py  720238967b38_add_username_to_users.py  850dfe5c3370_rename_price_to_price_minor_and_add_.py  c10ef697d06e_add_cart_and_cart_items_relations.py  d6701eb114f9_rename_price_amount_to_price.py  ec90f06d423d_init.py  f21e60fc4f6b_products_orders_enums_constraints_order_.py
app/: main.py
app/api/: deps.py  exceptions.py
app/api/depends/: __init__.py  cart.py  category.py  db.py  order.py  product.py  product_image.py  user.py  users.py
app/api/routers/: __init__.py  auth.py  cart.py  categories.py  category.py  media.py  order.py  product.py  product_image.py  products.py
app/core/: cache.py  celery_app.py  config.py  db.py  metrics.py  minio.py  security.py
app/db/: __init__.py  base.py  db.py  utils.py
app/domain/: enums.py
app/models/: __init__.py  cart.py  category.py  order.py  product.py  product_image.py  user.py
app/repositories/: __init__.py  cart.py  category.py  order.py  product.py  product_image.py  users.py
app/schemas/: auth.py  carts.py  categories.py  orders.py  product_image.py  products.py  users.py
app/services/: __init__.py  cart.py  category.py  order.py  product.py  product_image.py  users.py
app/tasks/: orders.py
payment_stub/: Dockerfile  main.py  pyproject.toml  schemas.py
