[tool.poetry]
name = "payment-stub"
version = "0.1.0"
description = ""
authors = ["Max <max_artyukhin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.127.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
